# HW_13_DJANGO_python_web

./: README.md  pyproject.toml
hw10/: .env  manage.py
hw10/hw10/: asgi.py  settings.py  urls.py  wsgi.py
hw10/quotes/: forms.py  models.py  urls.py  views.py
hw10/quotes/migrations/: 0001_initial.py  0002_author_remove_quotes_author_remove_quotes_tag_and_more.py  0003_alter_tag_name.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
hw10/quotes/templatetags/: extract_tags.py
hw10/users/: forms.py  urls.py  views.py
hw10/users/templates/users/: login.html  signup.html
hw10/utils/: config.ini  connect.py  import_mongo_data.py
