[tool.poetry]
name = "hw-13-django-python-web"
version = "0.1.0"
description = ""
authors = ["Olga Mageria <olgamageria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymongo = "^4.6.3"
mongoengine = "^0.28.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
